--- a/pixelegg/less/layout_dhtmlSubmenu.less
+++ b/pixelegg/less/layout_dhtmlSubmenu.less
@@ -31,6 +31,9 @@ div.dhtmlxMenu_egw_SubLevelArea_Polygon{
 				img.sub_icon {
 					filter: @sl-filter-menu;
 				}
+				img[id$="filemanager"] {
+					filter: invert(0) brightness(5) !important;
+				}
 			}
 			background-color: @sl-bg-color-menu !important;
 			background-image: none !important;
